styles.css
/* ... */
@keyframes slideFromTop {
0% {
    transform: translateY(-100vh);
}

100% {
    transform: translateY(0);
}
}

/* Fly in from the left */
@keyframes flyInFromLeft {
0% {
    transform: translateX(-100vw);
}

100% {
    transform: translateX(0);
}
}

/* Fly in from the right */
@keyframes flyInFromRight {
0% {
    transform: translateX(100vw);
}

100% {
    transform: translateX(0);
}
}

/* Fly in from the bottom */
@keyframes flyInFromBottom {
0% {
    transform: translateY(100vh);
}

100% {
    transform: translateY(0);
}
}

@keyframes flyOutToBottom {
0% {
    transform: translateY(0);
}

100% {
    transform: translateY(100vh);
}
}

#main_output_container {
margin-top: 15px;
flex-direction: row-reverse;
}

@keyframes slide {
0% {
    transform: translateX(0);
}

100% {
    transform: translateX(-50%);
}

/* For two slide-tracks */
}

@keyframes bounce {

0%,
20%,
50%,
80%,
100% {
    transform: translateY(0);
}

40% {
    transform: translateY(-10px);
}

60% {
    transform: translateY(-5px);
}
}



@keyframes TitleGradientAnimation {
0% {
    background-position: 100% 0px;
}

25% {
    background-position: 25% 25%;
}

50% {
    background-position: 0px 50%;
}

75% {
    background-position: 75% 25%;
}

100% {
    background-position: 100% 0px;
}
}

@keyframes fade-in {
0% {
    opacity: 0;
}

100% {
    opacity: 1;
}
}

@keyframes fade-out {
0% {
    opacity: 1;
}
100% {
    opacity: 0;
}
}

.rotate-icon {
display: inline-block;  /* This ensures that the transform property works as expected */
transform-origin: center;
transition: all 0.3s ease; /* This will ensure a smooth transition in both directions */
}

#randButton {
margin-right: -10px;
}

#sendButton:hover .rotate-icon {
color: #69c95c;
transform: rotate(-30deg) translate3d(6px, -2px, 3px);
}

#sendButton:hover {
background-color: transparent; /* Background becomes transparent on hover */
}

#sendButton {
background-color: #00d600a1; /* Initial background color */
transition: all 0.3s ease-in-out; /* Transition for smooth animation */
}

/* Hover effect for the send button */
#sendButton:hover, #sendButton:hover .rotate-icon {
background-color: transparent; /* Background becomes transparent on hover */
}

.container pre {
display: flex;
flex-wrap: nowrap;
justify-content: space-evenly;
align-items: flex-start;
flex-direction: row-reverse;
}

.container::before {
color: #ffffff8e; /* Placeholder text color */
text-align: center;
opacity: 0.0;
display: var(--empty, flex);
justify-content: center;
align-items: center;
overflow-y: auto;
position: absolute;
width: 100%;
height: 100%;
}

code.language-python {
    background-color: #87c25e52;
    max-width: 60vmax;
    white-space: pre-wrap;
    margin-bottom: -70px;
    text-align: start;
    transition: all ease-in 0.2s;
    padding-right: 20px;
    padding-bottom: 20px;
    padding-left: 20px;
    border-radius: 44px;
}

.container:not(:empty)::before {
--empty: none;
}

.bottom-bar {
    display: flex;
    justify-content: space-between;
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
    align-items: center;
    width: 100vw;
    height: 60px; /* Adjust as needed */
    background-color: #124f598c; /* Adjust color as needed */
}

.carousel-container {
    flex: 0.7;
    display: flex;
    overflow-x: auto;
    gap: 10px; /* Space between chat cards */
}

.chat-card {
    min-width: 100px; /* Adjust as needed */
    cursor: grabbing;
    height: 40px; /* Adjust as needed */
    background-color: #e0e0e0; /* Adjust color as needed */
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.buttons-container {
    flex: inherit;
    display: flex;
    margin-right: 16px;
    gap: 10px; /* Space between buttons */
    margin-bottom: 20px;
}




p.user {
    background: #0088ff;
    text-align: start;
    word-wrap: break-word;
    margin-left:14px;
    margin-top: 20px;
    margin-bottom: 20px;
    margin-right:14px;
    width: fit-content;
    display: inline-block;
    animation: flyInFromRight 0.7s cubic-bezier(0.4, 0, 0.2, 1);
    transition: all ease-in 0.2s;
    padding: 16px;
    border-radius: 32px;
}

p.char {
    background: black;
    border-radius: 32px;
    margin-right: 48px;
    max-width: 900px;
    /* text-align: start; */
    padding: 16px;
    margin-left: 10px;
    transition: all ease-in 0.3s;
}


p.user:hover {
transform: translateX(-6px);
}

.language-python.error {
background-color: #d65c5c6e; /* Change this to the color you want for failed execution */
transition: all ease-in 0.2s;
}

.language-python:hover {
transform: translateY(2px);
}

.language-python {
transition: all 0.8s ease-in-out;
}

@keyframes rotateIn {
from {
    transform: rotate(0deg);
}
to {
    transform: rotate(360deg);
}
}

@keyframes rotateOut {
from {
    transform: rotate(360deg);
}
to {
    transform: rotate(0deg);
}
}

/* Apply the animation on hover */
#resetButton:hover .fas.fa-redo {
animation: rotateIn 0.5s forwards;
}

/* Reset the animation when not hovered */
#resetButton .fas.fa-redo {
animation: rotateOut 0.5s forwards;
}

fieldset div label {
    display: block; /* Make the label block-level so it takes up the full width */
    border-bottom: 1px solid #100f0f;
    margin-bottom: 10px;
    padding-bottom: 5px;
}

#randomizeButton {
transition: all 0.3s ease; /* This will ensure a smooth transition in both directions */  
background-color: #9b00d661; /* Initial background color */
}

#randomizeButton:hover {
background-color: #9b00d600; /* Initial background color */
}

#randomizeButton i {
transition: all 0.3s ease; /* This will ensure a smooth transition in both directions */  
}

/* Randomize Button Icon Hover Animation */
#randomizeButton:hover i, #randomizeButton i:hover {
color: #af79c1;
background-color: #9b00d600;
animation: rotisserieSpin 1.4s cubic-bezier(0.32, 0, 0.67, 1) infinite;
}
/* ... */

